# SpargeAttn

./: README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
spas_sage_attn/: win_compat.py
