[build-system]
requires = [
    "setuptools>=65.0", 
    "wheel",
    "ninja",
    "torch>=2.3.0"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = 1
test-command = "pytest tests/"
test-requires = ["pytest"]

[project]
name = "sparge-attn"
version = "0.1.0+cuda{cuda_major}{cuda_minor}"
dependencies = [
    "numpy>=1.21",
    "triton-windows>=3.3.1,<3.4; sys_platform == 'win32'",
    "triton>=3.2.0; sys_platform != 'win32'"
]
